Fix code smells (#9910)
---------

Signed-off-by: sdimitrov9 <stoyan.dimitrov@limechain.tech>